# hcc-compiler

./: .gitignore  Makefile  README.md  cleanup-final-report.md  cleanup-progress.md  pyproject.toml
.claude/handoffs/: nutrient-timing-expansion.md  post-cleanup-and-sp3-design.md
docs/: PRD-plan2.md  PRD-plan3.md  PRD-sp2.md  PRD.md  explainer.html
docs/plans/: 2026-05-25-saas-pivot.md  sp1-plan1-library-foundation.md  sp1-plan2-curation-pipeline.md  sp1-plan3-patterns-and-embeddings.md  sp2-compiler-runtime.md
docs/specs/: library-coverage-gap.md  sp1-evidence-library-design.md  sp3-change-ledger.md
scratch/: qa-smoke-intake.yaml
scripts/: apply_curation.py  audit_derive_queries.py  compare_top3.py  compile_plan.py  provision_saas.sh  regen_persona_packs.py  retrieve.py  verify_confidence.py
scripts/curation/: backfill_verdicts.py  build_index.py  derive_patterns.py  extract.py  harvest.py  reextract_fails.py  regrade_atoms.py  route.py  tighten_tags.py  validate_library.py  (+3 more)
supabase/: README.md  config.toml
tests/: test_build_index.py  test_build_index_embeddings.py  test_build_index_orphan_cleanup.py  test_build_index_transaction.py  test_db_path_explicit.py  test_embed_client_retry.py  test_extract.py  test_fake_call_llm_strict.py  test_loader.py  test_models_atom.py  test_models_pattern.py  test_patterns_idempotent.py  test_patterns_smoke.py  test_pipeline_smoke.py  test_route.py  test_validate.py  test_validate_patterns.py  test_verify_cli_abstracts.py
web/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  proxy.ts  vitest.config.ts
(+233 files in other folders)
